# motor_magnetometer_test

./: CMakeLists.txt  capture.cpp  capture.h  check.cpp  common.h  read.cpp  sim.cpp  to_csv.cpp
arduino/motor_test/: common.cpp  common.h  motor_test.ino
